--- a/recorder/templates/recorder/patient_dashboard.html
+++ b/recorder/templates/recorder/patient_dashboard.html
@@ -9,10 +9,12 @@
 
 {% block content %}
     <div class="row">
-        <h2>Personal Information for {{ patient.user.first_name }} {{ patient.user.last_name }}</h2>
-        <p>Date of birth: {{ patient.date_of_birth }}</p>
-        <p>Email Address: {{ patient.user.email }}</p>
-        <p>Doctor: {{ patient.doctor.user.first_name }} {{ patient.doctor.user.last_name }}</p>
+        <div class="col-md-12">
+            <h2>Personal Information for {{ patient.user.first_name }} {{ patient.user.last_name }}</h2>
+            <p>Date of birth: {{ patient.date_of_birth }}</p>
+            <p>Email Address: {{ patient.user.email }}</p>
+            <p>Doctor: {{ patient.doctor.user.first_name }} {{ patient.doctor.user.last_name }}</p>
+        </div>
     </div>
 
     <div class="row">
@@ -24,17 +26,21 @@
     </div>
 
     <div class="row">
-        <h2>Prescriptions</h2>
-        {% for prescription in patient.prescriptions.all %}
-            <p>{{ prescription }}</p>
-        {% endfor %}
+        <div class="col-md-12">
+            <h2>Prescriptions</h2>
+            {% for prescription in patient.prescriptions.all %}
+                <p>{{ prescription }}</p>
+            {% endfor %}
+        </div>
     </div>
 
     <div class="row">
-        <h2>Videos for Last 5 Days</h2>
-        <div class="table-responsive">
-            <table id="video_table" class="table">
-            </table>
+        <div class="col-md-12">
+            <h2>Videos for Last 5 Days</h2>
+            <div class="table-responsive">
+                <table id="video_table" class="table">
+                </table>
+            </div>
         </div>
     </div>
 {% endblock content %}
