--- a/recorder/templates/recorder/record_video.html
+++ b/recorder/templates/recorder/record_video.html
@@ -8,10 +8,15 @@
 {% endblock extra-head %}
 
 {% block content %}
-    <video id="recordVideo" autoplay></video>
-    <video id="playVideo" autoplay loop></video>
+    <div class="row">
+        <div class="col-md-12">
+            <video id="recordVideo" autoplay></video>
+            <video id="playVideo" autoplay loop></video>
+        </div>
+    </div>
 
-    <div>
+    <div class="row">
+        <div class="col-md-12">
         <form id="video_upload" method="post" action="">
             {% csrf_token %}
             {{ form.medication.as_hidden }}
@@ -20,6 +25,7 @@
                 <button class="btn btn-primary" id="upload" disabled>Upload</button>
             </div>
         </form>
+        </div>
     </div>
 
 {% endblock content %}
