--- a/recorder/templates/recorder/add_patient.html
+++ b/recorder/templates/recorder/add_patient.html
@@ -6,7 +6,7 @@
 
 {% block extra-head %}
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'recorder/add_patient.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'recorder/prescription_table.css' %}" />
 {% endblock extra-head %}
 
 {% block content %}
