--- a/recorder/templates/recorder/patient_details.html
+++ b/recorder/templates/recorder/patient_details.html
@@ -7,6 +7,7 @@
 {% block extra-head %}
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'recorder/patient_details.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'recorder/prescription_table.css' %}" />
 {% endblock extra-head %}
 
 {% block content %}
@@ -34,7 +35,7 @@
     <div class="row">
         <div class="col-md-12">
             <h3>Prescriptions</h3>
-            <form id="prescriptions" method="post">
+            <form class="form-horizontal" id="prescriptions" method="post">
                 {% csrf_token %}
                 {% for form in formset %}
                     <div class="prescription-form" id="{{ form.prefix }}-row">
