--- a/memocha/templates/memocha/record_video.html
+++ b/memocha/templates/memocha/record_video.html
@@ -4,7 +4,7 @@
 
 {% block extra-head %}
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'recorder/record_video.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'memocha/record_video.css' %}" />
 {% endblock extra-head %}
 
 {% block content %}
@@ -33,5 +33,5 @@
 {% block extra-js %}
     {% load static %}
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-    <script type="text/javascript" src="{% static 'recorder/video.js' %}"></script>
+    <script type="text/javascript" src="{% static 'memocha/video.js' %}"></script>
 {% endblock extra-js %}
