--- a/memocha/templates/base.html
+++ b/memocha/templates/base.html
@@ -35,12 +35,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/recorder">memocha</a>
+                <a class="navbar-brand" href="/memocha">memocha</a>
             </div>
 
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/recorder/dashboard" id="home-link">Home</a></li>
+                    <li><a href="/memocha/dashboard" id="home-link">Home</a></li>
                 </ul>
 
                 {% if user.is_authenticated %}
