--- a/memocha/templates/memocha/doctor_dashboard.html
+++ b/memocha/templates/memocha/doctor_dashboard.html
@@ -13,7 +13,7 @@
         <div class="col-md-12">
             <div class="list-group">
                 {% for patient in patients %}
-                    <a href="{% url 'recorder:patient_details' patient.id %}" class="list-group-item list-group-item-action">{{ patient }}</a>
+                    <a href="{% url 'memocha:patient_details' patient.id %}" class="list-group-item list-group-item-action">{{ patient }}</a>
                 {% endfor %}
             </div>
         </div>
@@ -21,7 +21,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <button class="btn btn-block btn-primary" onclick="location.href='{% url 'recorder:add_patient' %}'">
+            <button class="btn btn-block btn-primary" onclick="location.href='{% url 'memocha:add_patient' %}'">
                 Add new patient</button>
         </div>
     </div>
