--- a/memocha/templates/memocha/index.html
+++ b/memocha/templates/memocha/index.html
@@ -4,22 +4,22 @@
 
 {% block extra-head %}
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'recorder/index.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'memocha/index.css' %}" />
 {% endblock extra-head %}
 
 {% block content %}
     <div class="col-md-3 col-md-offset-3">
         <h2 class="text-center">Doctor Login</h2>
-        <button class="btn btn-block btn-primary" onclick="location.href='{% url 'recorder:doctor_dashboard' %}'">
+        <button class="btn btn-block btn-primary" onclick="location.href='{% url 'memocha:doctor_dashboard' %}'">
             Login with Existing Account</button>
-        <button class="btn btn-block btn-primary" onclick="location.href='{% url 'recorder:doctor_creation' %}'">
+        <button class="btn btn-block btn-primary" onclick="location.href='{% url 'memocha:doctor_creation' %}'">
             Create New Doctor Account</button>
     </div>
     <div class="col-md-3">
         <h2 class="text-center">Patient Login</h2>
-        <button class="btn btn-block btn-primary" onclick="location.href='{% url 'recorder:patient_dashboard' %}'">
+        <button class="btn btn-block btn-primary" onclick="location.href='{% url 'memocha:patient_dashboard' %}'">
             Login with Existing Account</button>
-        <button class="btn btn-block btn-primary" onclick="location.href='{% url 'recorder:patient_creation' %}'">
+        <button class="btn btn-block btn-primary" onclick="location.href='{% url 'memocha:patient_creation' %}'">
             Create New Patient Account</button>
     </div>
 {% endblock content %}
